Add Create Post API and Update Post API also the Swagger Documentation
