# storage/api-docs/api-docs.json
@@ -80,6 +80,147 @@
                 }
             }
         },
+        "/api/posts/create": {
+            "post": {
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Create a new post",
+                "description": "This API allows you to create a new post",
+                "operationId": "store",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "slug",
+                                    "body",
+                                    "image",
+                                    "category_id",
+                                    "user_id"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "description": "Post TItle",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "slug": {
+                                        "description": "Post Slug",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "category_id": {
+                                        "description": "Category ID",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "body": {
+                                        "description": "Body of Post",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "image": {
+                                        "description": "file to upload",
+                                        "type": "file",
+                                        "format": "string"
+                                    },
+                                    "user_id": {
+                                        "description": "User ID",
+                                        "type": "string",
+                                        "format": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/posts/update/{slug}": {
+            "post": {
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Update a new post",
+                "description": "This API allows you to update a new post",
+                "operationId": "update",
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Slug to retrieve",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "slug",
+                                    "body",
+                                    "image",
+                                    "user_id",
+                                    "category_id"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "description": "Post TItle",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "slug": {
+                                        "description": "Post Slug",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "body": {
+                                        "description": "Body of Post",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "image": {
+                                        "description": "file to upload",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "user_id": {
+                                        "description": "User ID",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "category_id": {
+                                        "description": "Category ID",
+                                        "type": "string",
+                                        "format": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
         "/": {
             "get": {
                 "description": "Home page",
